fix(insights): fixed app state provider not being wrapped in a suspense

--- a/apps/insights/src/components/PythFeedsDemoPage/index.module.scss
+++ b/apps/insights/src/components/PythFeedsDemoPage/index.module.scss
@@ -4,6 +4,20 @@
   padding-top: theme.spacing(4);
 }
 
+.suspenseLoader {
+  @include theme.max-width;
+  align-items: center;
+  display: flex;
+  flex-flow: column;
+  gap: theme.spacing(2);
+  margin-top: theme.spacing(6);
+
+  & svg {
+    height: theme.spacing(10);
+    width: theme.spacing(10);
+  }
+}
+
 .subheader {
   border-bottom: 1px solid theme.color("border");
   display: flex;
